added validate user and role based hierarchy